Fixed navbar truncation

--- a/style.css
+++ b/style.css
@@ -26,8 +26,16 @@ body {
     margin: 12px 15px 0;
 }
 
-#navbar-top a {
+#announcement-link {
     float: left;
+    width: 75%;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
+#announcement-link,
+#navbar-top ul li a {
     color: #5b6987;
     font-size: 1.3rem;
     font-weight: bold;
@@ -47,7 +55,7 @@ body {
 }
 
 .tag-new {
-    float: left;
+    display: inline-block;
     margin: 0 15px;
     background-color: #00d7d2;
     font-size: 1rem;
@@ -62,8 +70,7 @@ body {
 }
 
 .announcement-text {
-    float: left;
-    white-space: nowrap;
+    display: inline;
 }
 
 #navbar-top ul {
